(lang dune 2.8)

(generate_opam_files true)

(cram enable)

(license LGPL-3.0-only)

(authors "Chehade Daniel")

(maintainers "Chehade Daniel")

(bug_reports "https://github.com/danielsheh02/fp2021/issues")

(homepage "https://github.com/danielsheh02/fp2021")

(package
 (name Cypher) ; FIXME and regenerate .opam file using 'dune build @install'
 (synopsis "FIXME An interpreter for language")
 (description
  "FIXME. A longer description, for example, which are the most interesing features being supported, etc.")
 (version 0.1)
 (depends
  dune
  angstrom
  (ppx_inline_test :with-test)
  qcheck-core
  ppx_deriving
  ppx_expect
  ppx_show
  (odoc :with-doc)
  (ocamlformat :build)
  base
  ; After adding dependencies to 'dune' files and the same dependecies here too
  ))
