(executable
 (name demoCypherParse)
 (modules demoCypherParse)
 (public_name demoCypherParse)
 (libraries Cypher.Lib stdio))

(executable
 (name demoCypherInterpret)
 (modules demoCypherInterpret)
 (public_name demoCypherInterpret)
 (libraries Cypher.Lib stdio))

(executable
 (name matchManual)
 (modules matchManual)
 (public_name matchManual)
 (libraries Cypher.Lib stdio))

(executable
 (name whereManual)
 (modules whereManual)
 (public_name whereManual)
 (libraries Cypher.Lib stdio))

(cram
 (deps
  ./demoCypherInterpret.exe
  ./demoCypherParse.exe
  ./matchManual.exe
  ./whereManual.exe))
